--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.1.3"
   }
 }
